--- a/native/css/main.css
+++ b/native/css/main.css
@@ -13,14 +13,6 @@ body{
     height: 100%;
 }
 
-@media (max-width: 768px) {
-    .body-main{
-        margin: 0;
-        width: 100%;
-        height: 100%;
-    }
-}
-
 .overflow_omit{
     overflow: hidden;
     white-space: nowrap;
@@ -135,4 +127,45 @@ body{
     font-size: 0.5rem;
     color: lightcoral;
     margin: 0.5rem 0.5rem;
+}
+
+@media (max-width: 768px) {
+    .body-main{
+        margin: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+    .main-project section div {
+        height: calc(100% - 2rem);
+        margin: 0;
+        padding: 5px;
+        font-size: 0.6rem;
+        color: rgb(39, 128, 157);
+        white-space: normal;
+    }
+
+    .main-blog h2 {
+        height: 1rem;
+        margin: 0;
+        padding: 1px 5px;
+        font-size: 0.8rem;
+        color: gray;
+    }
+
+    .main-blog section div {
+        height: calc(100% - 2rem);
+        margin: 0;
+        padding: 5px;
+        font-size: 0.6rem;
+        color: rgb(143, 56, 56);
+        white-space: normal;
+    }
+
+    .main-view_more {
+        text-align: end;
+        font-size: 0.3rem;
+        color: lightcoral;
+        margin: 0.2rem 0.5rem;
+    }
 }
